crates/ralf-tui/src/snapshots/ralf_tui__snapshot_tests__criteria_all_passed.snap
---
source: crates/ralf-tui/src/lib.rs
expression: result
---
┌ Run Status ──────────────────────────────────────────────────────────────────┐
│ VERIFYING  Run: test-run-123  Elapsed: -                                     │
│ Iter 1  Model: claude                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Output ──────────────────────────────────────────────┐┌ Criteria ────────────┐
│ Verifying completion criteria...                     ││☑ Tests pass          │
│                                                      ││☑ Compiles            │
│                                                      ││☑ No warnings         │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
└──────────────────────────────────────────────────────┘└──────────────────────┘
┌ Events ──────────────────────────────────────┐┌ Git ─────────────────────────┐
│ No events yet                                ││ Branch: main                 │
│                                              ││ No changes                   │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
└──────────────────────────────────────────────┘└──────────────────────────────┘
 Status   Esc/Ctrl+C  Cancel  f  Toggle Follow  ?  Help               Verifying
