crates/ralf-tui/src/snapshots/ralf_tui__snapshot_tests__run_dashboard_cancelled.snap
---
source: crates/ralf-tui/src/lib.rs
expression: result
---
┌ Run Status ──────────────────────────────────────────────────────────────────┐
│ CANCELLED  Run: test-run-123  Elapsed: -                                     │
│ Iter 1  Model: -                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Output ──────────────────────────────────────────────┐┌ Criteria ────────────┐
│ Press Enter to start the run                         ││ No criteria found    │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
└──────────────────────────────────────────────────────┘└──────────────────────┘
┌ Events ──────────────────────────────────────┐┌ Git ─────────────────────────┐
│ No events yet                                ││ Branch: main                 │
│                                              ││ No changes                   │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
└──────────────────────────────────────────────┘└──────────────────────────────┘
 Status   Enter  Start  Esc  Back  f  Toggle Follow  ?  Help          Cancelled
