crates/ralf-tui/src/snapshots/ralf_tui__snapshot_tests__run_dashboard_verifying.snap
---
source: crates/ralf-tui/src/lib.rs
expression: result
---
┌ Run Status ──────────────────────────────────────────────────────────────────┐
│ VERIFYING  Run: test-run-123  Elapsed: 0m 00s                                │
│ Iter 3/10  Model: claude                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Output [1-2/2] ──────────────────────────────────────┐┌ Criteria ────────────┐
│Working on the task...                                ││ No criteria found    │
│>>> Processing files                                  ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
│                                                      ││                      │
└──────────────────────────────────────────────────────┘└──────────────────────┘
┌ Events ──────────────────────────────────────┐┌ Git ─────────────────────────┐
│ No events yet                                ││ Branch: main                 │
│                                              ││ No changes                   │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
│                                              ││                              │
└──────────────────────────────────────────────┘└──────────────────────────────┘
 Status   Esc/Ctrl+C  Cancel  f  Toggle Follow  ?  Help               Verifying
