crates/ralf-tui/src/snapshots/ralf_tui__snapshot_tests__shell_autocomplete_popup.snap
---
source: crates/ralf-tui/src/lib.rs
expression: result
---
● No Thread │ "Select a thread to start"
┌ Conversation ────────────────┐╭ Models ──────────────────────────────────────╮
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│ ┌───────────────────────────────────────────┐                                │
│ │/help  Show available commands             │                                │
│ │/quit  Exit ralf                           │                                │
│ │/split  Split view mode                    │                                │
│ │/focus  Focus conversation mode            │                                │
│ │/canvas  Focus canvas mode                 │                                │
│ │/refresh  Refresh model status             │                                │
│ │/clear  Clear conversation                 │                                │
│─│/search  Search timeline                   │                                │
│>└───────────────────────────────────────────┘                                │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘╰──────────────────────────────────────────────╯
[Enter] Send │ [Tab] Switch │ [/] Commands │ [Esc] Quit
